--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Containeraider</h1>
         <h2>ContainerAideR</h2>
-        <a href="https://github.com/ContainerAideR/ContainerAideR" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://github.com/ContainerAideR" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
